...
            <connections>
                <outlet property="delegate" destination="205" id="2IS-vA-KKo"/>
            </connections>
        </customObject>
        <menu title="MainMenu" systemMenu="main" id="29" userLabel="MainMenu">
            <items>
                <menuItem title="Half Dark" id="56">
                    <menu key="submenu" title="Half Dark" systemMenu="apple" id="57">
                        <items>
                            <menuItem title="About Half Dark" id="58">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="showAboutPanel:" target="-1" id="ivG-FU-hGW"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="196">
                                <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                            </menuItem>
                            <menuItem title="Settings…" keyEquivalent="," id="129">
                                <connections>
                                    <action selector="openPreferencesWindow:" target="-1" id="wRi-Ra-7Ua"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Check for Updates…" id="919">
                                <modifierMask key="keyEquivalentModifierMask"/>
...
                            </menuItem>
                            <menuItem title="History" keyEquivalent="1" id="927">
                                <connections>
                                    <action selector="showHistoryView:" target="-1" id="930"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Uncommitted Changes" keyEquivalent="2" id="928">
                                <connections>
                                    <action selector="showUncommittedChanges:" target="-1" id="931"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="929"/>
                            <menuItem title="Detail View" keyEquivalent="1" id="848">
...
