...

	forceSelectionUpdate = YES;
	NSSize cellSpacing = [commitList intercellSpacing];
	cellSpacing.height = 0;
	[commitList setIntercellSpacing:cellSpacing];
	commitList.allowsMultipleSelection = YES;
	commitList.accessibilityIdentifier = @"CommitList";
	[fileBrowser setTarget:self];
	[fileBrowser setDoubleAction:@selector(openSelectedFile:)];
	fileBrowser.delegate = (id<NSOutlineViewDelegate>)self;
	fileBrowser.allowsMultipleSelection = YES;
	[[NSNotificationCenter defaultCenter] addObserver:self
											 selector:@selector(historyTreeSettingsDidChange:)
...
